Many changes to States, added help state. Added test for keypresses.

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,7 +2,7 @@
 LDFLAGS = -L/usr/local/opt/ncurses/lib
 CPPFLAGS = -I/usr/local/opt/ncurses/include
 LINKER =  -lncurses
-SOURCE = test_windows.cc
+SOURCE = test_keypresses.cc
 EXEC = Test
 
 all:
